--- a/web_app/static/web_app/css/gestion.css
+++ b/web_app/static/web_app/css/gestion.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Lora';
-  background: linear-gradient(rgba(47, 23, 15, 0.65), rgba(47, 23, 15, 0.65)), url("../img/1101269.jpg");
+  background: linear-gradient(rgba(47, 23, 15, 0.65), rgba(47, 23, 15, 0.65)), url("../img/1.jpg");
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
