--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -26,6 +26,6 @@
 
     </form>
 
-    <p class="mt-4">Don't have an account yet? <a href="">Sign up here.</a></p>
+    <p class="mt-4">Don't have an account yet? <a href="{% url 'customer:signup' %}">Sign up here.</a></p>
 
 {% endblock %}
